# ROS2-ODrive-SocketCAN

./: .gitignore  README.md  odriveNodeStart.sh  socketcanStart.sh
can_interface/: CMakeLists.txt  package.xml
can_interface/msg/: CanFrame.msg
can_interface/srv/: CanFrame.srv
odrive/: CMakeLists.txt  package.xml
odrive/launch/: odrive_launch.py
odrive/src/: odrive.cpp
odrive_interface/: CMakeLists.txt  package.xml
odrive_interface/msg/: AxisStatus.msg  EncoderEstimates.msg  Heartbeat.msg  InputPosition.msg  InputVelocity.msg
odrive_interface/srv/: AxisState.srv  InputPosition.srv  InputVelocity.srv
odrive_socketCAN/: CMakeLists.txt  package.xml
odrive_socketcan/: CMakeLists.txt  package.xml
position_calculator/: CMakeLists.txt  package.xml
position_calculator/src/: position_calculator.cpp
socketcan/: CMakeLists.txt  package.xml
socketcan/launch/: socketcan_launch.py
socketcan/src/: socketcan.cpp  socketcan_receiver.cpp  socketcan_sender.cpp
steer_axis_angle/: CMakeLists.txt  package.xml
steer_axis_angle/launch/: steer_angle_launch.py
steer_axis_angle/src/: steer_axis_angle.cpp
