<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_socketCAN</name>
  <version>0.0.0</version>
  <description>A package to connect to an ODrive BLDC Driver through SocketCAN using its' CAN Port</description>
  <maintainer email="37396126+KMcNickel@users.noreply.github.com">KMcNickel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
