<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>steer_axis_angle</name>
  <version>0.0.0</version>
  <description>A package for calculating the angle of a power caster steer axis</description>
  <maintainer email="37396126+KMcNickel@users.noreply.github.com">KMcNickel</maintainer>
  <license>MIT</license>

  <depend>odrive_interface</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
